# emu6502

./: .dockerignore  .gitignore  6502.json  6502_decimal_test.lst  65C02_extended_opcodes_test.lst  Cargo.toml  Dockerfile  LICENSE  README.md  ___-0002708.mm_profdata  ___-0009900.mm_profdata  blank.nib  c600.txt  docker_run.sh  emu6502  emu6502.res  noslotclock.rs  opcode_gen.go  out.txt  profile_build.bat  profile_set.bat  run_jace.bat  self_test.wasm  set_linker.bat  set_rustflags.bat  setenv.bat  test_dhr.java  test_dhr2.java  test_ntsc.java  video.rs  woz_flux.py  wozardry.py
.github/workflows/: jekyll-gh-pages.yml  rust.yml
a2stream/: a2stream.md
docs/: emu6502_web.js  emu6502_web_bg.wasm  index.html  style.css
emu6502_web/: Cargo.toml  LICENSE  README.md  build.bat  index.html  justfile  serverwasm.py  style.css
emu6502_web/pkg/: emu6502_web.js  emu6502_web_bg.wasm
emu6502_web/src/: lib.rs
emulator/: Cargo.toml
emulator/benches/: cpu_bench.rs
emulator/iz80/: Cargo.toml
emulator/iz80/src/: cpu.rs  decoder_8080.rs  decoder_z80.rs  environment.rs  lib.rs  machine.rs  opcode.rs  opcode_alu.rs  opcode_arith.rs  opcode_bits.rs  opcode_io.rs  opcode_jumps.rs  opcode_ld.rs  operators.rs  registers.rs  state.rs  timed_runner.rs
emulator/src/: audio.rs  bus.rs  cpu.rs  cpu65816.rs  cpu_stats.rs  disk.rs  disksound.rs  harddisk.rs  lib.rs  lss.rs  marshal.rs  memory.rs  mmu.rs  mockingboard.rs  mouse.rs  network.rs  noslotclock.rs  ntsc.rs  opcodes.rs  parallel.rs  ramfactor.rs  trace.rs  video.rs  videoterm.rs  vidhd.rs
firmware/: mousedrv.a65
firmware/hdd/: hddrvr.a65  hddrvr.labels
firmware/mouse/: mouse.txt  mouse_relative.a65  mousedrv.a65
printshop/: printer.txt  printer1.txt  setenv.bat  test.java
sdl_frontend/: Cargo.toml
sdl_frontend/imgui-sdl3/: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE.md  README.md  build.rs  cliff.toml  deny.toml  flake.nix  typos.toml
sdl_frontend/imgui-sdl3/.github/: dependabot.yml
sdl_frontend/imgui-sdl3/.github/workflows/: nix.yml
sdl_frontend/imgui-sdl3/examples/: demo.rs
sdl_frontend/imgui-sdl3/shaders/: imgui.frag  imgui.vert
sdl_frontend/imgui-sdl3/src/: lib.rs  platform.rs  renderer.rs  utils.rs
sdl_frontend/res/: emu6502.rc  resource.h
sdl_frontend/src/: build.rs  main.rs  main.rs.refcell
self_test/: Cargo.toml
self_test/src/: main.rs
zig-6502/: .gitignore  LICENSE  README.md  build.zig
zig-6502/data/: 6502_functional_test.a65  6502_functional_test.lst
zig-6502/src/: cpu.zig  main.zig  memory.zig  status.zig  test.zig  types.zig
