[workspace]
members = [
    "emulator",
    "sdl_frontend",
    "self_test",
]

resolver = "2"

[workspace.package]
version = "0.9.3"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = true
panic = "abort"
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"
