[workspace]
members = [
    "emulator",
    "sdl_frontend",
    "self_test",
]

resolver = "3"

[workspace.package]
version = "0.9.4"
license = "MIT"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = true
panic = "abort"
strip = true
