[workspace]

[package]
name = "emu6502_web"
description = "Apple ][+/2e Emulator in Rust"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu6502 = { path = "../emulator", features=["serde_support","z80","web_time","flate"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-time = "1.1.0"
console_error_panic_hook = "0.1.7"
#wee_alloc = "0.4.5"
autocfg = "1.3.0"

[lib]
name = "emu6502_web"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

