[workspace]

[package]
name = "emu6502_web"
description = "Apple ][+/2e Emulator in Rust"
version = "0.9.4"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu6502 = { path = "../emulator", features=["serde_support","z80","web_time","flate","zip"] }
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.51"
js-sys = "0.3.78"
web-time = "1.1.0"
console_error_panic_hook = "0.1.7"
#wee_alloc = "0.4.5"
autocfg = "1.5.0"

[lib]
name = "emu6502_web"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
