[package]
name = "emu6502"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.8.0"
flate2 = { version = "1.1.0", optional = true }
web-time = { version = "1.1.0", optional = true }
serde = { version = "1.0.218", features = ["derive"],  optional = true }
iz80 = { path = "iz80", optional = true }
time = { version = "0.3.37", features = ["local-offset","wasm-bindgen"] }
fastrand = "2.3.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug"], optional = true }
pcap = { version = "2.2.0", default-features = false, optional = true }
libloading = { version = "0.8.6", default-features = false, optional = true }

[dev-dependencies]
regex = "1.11.1"
criterion = { version = "0.5.1", features = ['html_reports'] }
crossbeam-utils = "0.8.21"
serde_json = "1.0.139"
crossbeam-epoch = "0.9.18"
ryu = "1.0.19"
autocfg = "1.4.0"
crossbeam-channel = "0.5.14"
num_cpus = "1.16.0"

[features]
default = []
#default = [ "serde_support" ]
serde_support = ["dep:serde", "dep:educe"]
z80 = ["dep:iz80"]
web_time = ["dep:web-time"]
flate = ["dep:flate2"]
pcap = ["dep:pcap", "dep:libloading"]

[[bench]]
name = "cpu_bench"
harness = false

[lib]
doctest = false
