[package]
name = "emu6502"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.10.0"
flate2 = { version = "1.1.8", features = ["zlib-rs"], optional = true }
zip = { version = "7.2.0", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "time", "zstd"], optional = true }
web-time = { version = "1.1.0", optional = true }
serde = { version = "1.0.228", features = ["derive"],  optional = true }
iz80 = { path = "iz80", optional = true }
time = { version = "0.3.46", features = ["local-offset","wasm-bindgen"] }
fastrand = "2.3.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug"], optional = true }
pcap = { version = "2.4.0", default-features = false, optional = true }
libloading = { version = "0.9.0", default-features = false, optional = true }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
regex = "1.12.2"
criterion = { version = "0.8.1", features = ['html_reports'] }
crossbeam-utils = "0.8.21"
serde_json = "1.0.149"
crossbeam-epoch = "0.9.18"
ryu = "1.0.22"
autocfg = "1.5.0"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"

[features]
default = []
#default = [ "serde_support" ]
serde_support = ["dep:serde", "dep:educe"]
z80 = ["dep:iz80"]
web_time = ["dep:web-time"]
flate = ["dep:flate2"]
zip = ["dep:zip"]
pcap = ["dep:pcap", "dep:libloading"]

[[bench]]
name = "cpu_bench"
harness = false

[lib]
doctest = false
