[package]
name = "sdl_frontend"
version.workspace = true
edition = "2024"
build = "src/build.rs"
default-run = "emu6502"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
rfd = { version = "0.15.3", default-features = false, features = ['gtk3'] }
emu6502 = { path = "../emulator" }
#sdl2 = "0.35.2"
#sdl2 = { version = "0.35.2", features = ['bundled', 'static-link'] }
serde_yaml = { version = "0.9.34", optional = true }
image = { version = "0.25.6", default-features = false, features = ['jpeg','png'] }
spin_sleep = "1.3.1"
#regex = { version = "1.8.1", optional = true }

[target.'cfg(any(target_os="windows"))'.dependencies]
windows-sys = { version="0.60.1", features = ['Win32_System_LibraryLoader'] }

[target.'cfg(any(target_os="windows", target_os="linux"))'.dependencies]
sdl2 = { version = "0.37.0", features = ['bundled', 'static-link'] }

[target.'cfg(not(any(target_os="windows", target_os="linux")))'.dependencies]
sdl2 = "0.37.0"

#[target.x86_64-pc-windows-msvc.dependencies]
#winapi = "0.3.9"

[build-dependencies]
embed-resource = "3.0.3"
cc = "1.2.26"

[features]
#default = [ ]
default = ["serialization", "serde_support", "z80", "flate","zip"]

serialization = []
#default = ["serde_support", "z80", "flate", "regex"]
serde_support = ["dep:serde_yaml", "emu6502/serde_support"]
#regex = ["dep:regex"]
z80 = ["emu6502/z80"]
flate = ["emu6502/flate"]
zip = ["emu6502/zip"]
pcap = ["emu6502/pcap"]

[[bin]]
name = "emu6502"
path = "src/main.rs"
