[package]
name = "self_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu6502 = { path = "../emulator" }

[target.x86_64-unknown-linux-gnu.dependencies]
pprof = { version = "0.12.1", features = ["flamegraph","protobuf-codec"] }
symbolic-demangle = "12.4.0"
inferno = "0.11.16"

[[bin]]
name = "self_test"
path = "src/main.rs"

