[package]
name = "self_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu6502 = { path = "../emulator" }

[target.x86_64-unknown-linux-gnu.dependencies]
pprof = { version = "0.13.0", features = ["flamegraph","protobuf-codec"] }
symbolic-demangle = "12.10.1"
inferno = "0.11.21"

[[bin]]
name = "self_test"
path = "src/main.rs"

