[package]
name = "imgui-sdl3"
version = "0.4.1"
authors = ["florianvazelle"]
edition = "2024"
description = "Integration of ImGui with SDL3"
license = "MIT"
repository = "https://github.com/florianvazelle/imgui-sdl3"
keywords = ["imgui", "sdl3", "gui", "renderer"]
categories = ["gui", "rendering", "graphics"]
readme = "README.md"

[dependencies]
imgui = { version = "0.12.0" }
#imgui = { git = "https://github.com/imgui-rs/imgui-rs.git" }
sdl3 = "0.17.0"

[build-dependencies]
shaderc = "0.10.1"
